--- a/system/modules/pct_theme_updater/changelog.txt
+++ b/system/modules/pct_theme_updater/changelog.txt
@@ -1,5 +1,6 @@
 ### 1.0.2
 Fixed: Missing file information in auto. validated theme license (#40)
+Fixed: Finishing the update did not remove the pct_theme_version file correctly (#42)
 
 ### 1.0.1
 Update: Check min. client version compared to version installed (#25)
