--- a/system/modules/pct_theme_updater/changelog.txt
+++ b/system/modules/pct_theme_updater/changelog.txt
@@ -1,3 +1,6 @@
+### 1.0.4
+Update: Removed commented out javascript code from be_js_pct_theme_updater.html5 template (#46)
+
 ### 1.0.3
 Fixed: Namespace error in InstallationController class (#44)
 
