--- a/system/modules/pct_theme_updater/changelog.txt
+++ b/system/modules/pct_theme_updater/changelog.txt
@@ -1,3 +1,6 @@
+### 2.0.1
+Fixed: Purge the module folders completely to avoid deprecated files from older versions (#63)
+
 ### 2.0.0
 New: Support for Contao 4.13, 5.3 (#53)
 New: Checkbox "Delete demo files" to removed demo_installer files and delete_this folders after update has been checked in (#51)
