--- a/system/modules/pct_theme_updater/changelog.txt
+++ b/system/modules/pct_theme_updater/changelog.txt
@@ -1,3 +1,6 @@
+### 2.0.2
+Fixed: Checkbox "all" in maintenance did not toggle correctly (#67)
+
 ### 2.0.1
 Fixed: Purge the module folders completely to avoid deprecated files from older versions (#63)
 Fixed: TL_MODE error in InstallerHelper (#65)
