--- a/system/modules/pct_theme_updater/changelog.txt
+++ b/system/modules/pct_theme_updater/changelog.txt
@@ -1,3 +1,6 @@
+### 4.0.1
+Fixed: legacy fe_page was copied in already uptodate installations due to miss-leading version comparing (#102)
+
 ### 4.0.0
 Update: Ready for EclipseX6 (#97,#99)
 Update: Removed AjaxRequest.displayBox,.hideBox (#96)
