--- a/system/modules/pct_theme_updater/changelog.txt
+++ b/system/modules/pct_theme_updater/changelog.txt
@@ -1,3 +1,6 @@
+### 4.0.3
+Fixed: Rename existing fe_page template only when update-version is lower than 6.0 (#107)
+
 ### 4.0.2
 Update: Added migration routine for replacing module templates in HTML-modules with inserttags related to deprecated /layout/ folder (Migration: EclipseX 4.0.0) (#104)
 Update: Added subdomain information in license notification (#105)
